--- a/styles/estilosref.css
+++ b/styles/estilosref.css
@@ -27,7 +27,7 @@ main {
     font-family: 'Poppins', sans-serif;
     background-color: #ffffff;
     border-radius: 10px;
-    text-align: center;
+    text-align: left;
 }
 
 .menu{
